# vidtoolz-slideshow

./: .gitignore  README.md  pyproject.toml
tests/: test_vidtoolz_slideshow.py
vidtoolz_slideshow/: __init__.py
